--- a/RayCarrot.WPF/Controls/Dialogs/RegistryBrowser/RegistrySelectionDialog.xaml
+++ b/RayCarrot.WPF/Controls/Dialogs/RegistryBrowser/RegistrySelectionDialog.xaml
@@ -16,6 +16,7 @@
     <Window.InputBindings>
         <KeyBinding Key="F5" Command="{Binding Path=RefreshCommand}" />
         <KeyBinding Key="F2" Command="{Binding Path=BeginEditCommand}" />
+        <KeyBinding Key="Delete" Command="{Binding Path=DeleteKeyCommand}" />
         <KeyBinding Key="Esc" Command="{Binding Path=EndEditCommand}" />
     </Window.InputBindings>
     
@@ -116,13 +117,25 @@
 
                                     <Separator/>
 
-                                     <!-- Add Sub Key --> 
+                                    <!-- Delete Key -->
 
-                                    <MenuItem Header="Add Sub Key" />
+                                    <MenuItem Header="Delete Key" Command="{Binding Path=DeleteCommand}" InputGestureText="Del" />
 
                                     <!-- Rename Key -->
 
                                     <MenuItem Header="Rename Key" Command="{Binding Path=RenameCommand}" InputGestureText="F2" />
+
+                                    <Separator/>
+
+                                    <!-- Add Sub Key -->
+
+                                    <MenuItem Header="Add Sub Key" Command="{Binding Path=AddSubKeyCommand}" />
+                                    
+                                    <Separator/>
+
+                                    <!-- Copy Key Name -->
+
+                                    <MenuItem Header="Copy Key Name" Command="{Binding Path=CopyKeyNameCommand}" />
 
                                 </ContextMenu>
                             </Setter.Value>
@@ -136,7 +149,7 @@
                             <Image Width="16" Margin="3" Source="{Binding Path=AccessDenied, Converter={local:AccessDeniedToIconConverter}}" MouseLeftButtonDown="TreeViewItem_MouseDown" />
                             <TextBlock VerticalAlignment="Center" Text="{Binding Path=Name}" Visibility="{Binding Path=IsEditing, Converter={local:InvertedBooleanToVisibilityConverter}}" MouseLeftButtonDown="TreeViewItem_MouseDown"/>
                             <TextBox Text="{Binding Path=EditName}" Visibility="{Binding Path=IsEditing,Converter={local:BooleanToVisibilityConverter}}"
-                                     KeyDown="TextBox_KeyDown" LostFocus="EditTextBox_LostFocus" IsVisibleChanged="EditTextBox_IsVisibleChanged" />
+                                     KeyDown="TextBox_KeyDown" LostFocus="EditTextBox_LostFocus" IsVisibleChanged="EditTextBox_IsVisibleChanged" Loaded="TextBox_Loaded" />
                         </StackPanel>
                     </HierarchicalDataTemplate>
                 </TreeView.ItemTemplate>
