--- a/RayCarrot.WPF/Controls/Dialogs/DriveSelectionDialog/DriveSelectionDialog.xaml
+++ b/RayCarrot.WPF/Controls/Dialogs/DriveSelectionDialog/DriveSelectionDialog.xaml
@@ -1,23 +1,20 @@
-﻿<local:DialogVMWindow x:Class="RayCarrot.WPF.DriveSelectionDialog"
-                      x:TypeArguments="local:DriveSelectionViewModel, ui:DriveBrowserResult"
-                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                      xmlns:local="clr-namespace:RayCarrot.WPF"
-                      xmlns:ui="clr-namespace:RayCarrot.CarrotFramework.UI;assembly=RayCarrot.CarrotFramework.UI"
-                      mc:Ignorable="d"
-                      d:DataContext="{Binding Source={x:Static local:DesignTimeVM.DriveSelectionViewModel}}"
-                      Title="{Binding Path=BrowseVM.Title, FallbackValue='Select a Drive'}"
-                      Height="450" Width="800"
-                      MinHeight="300" MinWidth="400">
-    <Window.InputBindings>
+﻿<UserControl x:Class="RayCarrot.WPF.DriveSelectionDialog"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:local="clr-namespace:RayCarrot.WPF"
+             xmlns:ui="clr-namespace:RayCarrot.CarrotFramework.UI;assembly=RayCarrot.CarrotFramework.UI"
+             mc:Ignorable="d"
+             d:DesignHeight="300" d:DesignWidth="600"
+             d:DataContext="{Binding Source={x:Static local:DesignTimeVM.DriveSelectionViewModel}}">
+    <UserControl.InputBindings>
 
         <!-- Refresh -->
 
         <KeyBinding Key="F5" Command="{Binding RefreshCommand}"/>
 
-    </Window.InputBindings>
+    </UserControl.InputBindings>
     
     <Grid>
         <Grid.RowDefinitions>
@@ -91,4 +88,4 @@
         </Grid>
         
     </Grid>
-</local:DialogVMWindow>
+</UserControl>
