--- a/RayCarrot.WPF/Controls/Dialogs/RegistryBrowser/RegistrySelectionDialog.xaml
+++ b/RayCarrot.WPF/Controls/Dialogs/RegistryBrowser/RegistrySelectionDialog.xaml
@@ -1,24 +1,21 @@
-﻿<local:DialogVMWindow x:Class="RayCarrot.WPF.RegistrySelectionDialog"
-                      x:TypeArguments="local:RegistrySelectionViewModel, win:RegistryBrowserResult"
-                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                      xmlns:local="clr-namespace:RayCarrot.WPF"
-                      xmlns:win="clr-namespace:RayCarrot.Windows;assembly=RayCarrot.Windows"
-                      mc:Ignorable="d"
-                      d:DataContext="{Binding Source={x:Static local:DesignTimeVM.RegistrySelectionViewModel}}"
-                      Title="{Binding Path=BrowseVM.Title, FallbackValue='Select a Registry Key'}"
-                      Height="450" Width="800"
-                      MinHeight="300" MinWidth="400">
+﻿<UserControl x:Class="RayCarrot.WPF.RegistrySelectionDialog"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:local="clr-namespace:RayCarrot.WPF"
+             xmlns:win="clr-namespace:RayCarrot.Windows;assembly=RayCarrot.Windows"
+             mc:Ignorable="d"
+             d:DataContext="{Binding Source={x:Static local:DesignTimeVM.RegistrySelectionViewModel}}"
+             d:DesignHeight="450" d:DesignWidth="800">
     <!-- Keyboard Shortcuts -->
     
-    <Window.InputBindings>
+    <UserControl.InputBindings>
         <KeyBinding Key="F5" Command="{Binding Path=RefreshCommand}" />
         <KeyBinding Key="F2" Command="{Binding Path=BeginEditCommand}" />
         <KeyBinding Key="Delete" Command="{Binding Path=DeleteKeyCommand}" />
         <KeyBinding Key="Esc" Command="{Binding Path=EndEditCommand}" />
-    </Window.InputBindings>
+    </UserControl.InputBindings>
     
     <Grid>
         <Grid.RowDefinitions>
@@ -226,4 +223,4 @@
         </StackPanel>
         
     </Grid>
-</local:DialogVMWindow>
+</UserControl>
