--- a/RayCarrot.WPF/Controls/Dialogs/StringInputDialog/StringInputDialog.xaml
+++ b/RayCarrot.WPF/Controls/Dialogs/StringInputDialog/StringInputDialog.xaml
@@ -1,14 +1,11 @@
-﻿<local:DialogVMWindow x:Class="RayCarrot.WPF.StringInputDialog"
-                      x:TypeArguments="local:StringInputViewModel, local:StringInputResult"
-                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                      xmlns:local="clr-namespace:RayCarrot.WPF"
-                      mc:Ignorable="d"
-                      WindowStyle="ToolWindow" ResizeMode="NoResize"
-                      Title="{Binding Path=Title, FallbackValue='Input a Value'}"
-                      Height="160" Width="320">
+﻿<UserControl x:Class="RayCarrot.WPF.StringInputDialog"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:local="clr-namespace:RayCarrot.WPF"
+             mc:Ignorable="d"
+             Height="160" Width="320">
     <Grid Margin="5">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -23,4 +20,4 @@
             <Button Content="Cancel" Click="CancelButton_Click" IsCancel="True"/>
         </StackPanel>
     </Grid>
-</local:DialogVMWindow>
+</UserControl>
