--- a/RayCarrot.WPF/Controls/BrowseBox/BrowseBox.xaml
+++ b/RayCarrot.WPF/Controls/BrowseBox/BrowseBox.xaml
@@ -25,7 +25,7 @@
                     <MenuItem Header="_Undo" Command="Undo"/>
                     <Separator />
                     <MenuItem Header="Open Location"
-                              Click="ContextMenu_OpenLocation"
+                              Click="ContextMenu_OpenLocationAsync"
                               IsEnabled="{Binding Path=FilePath, Converter={local:PathExistsConverter}}"/>
                 </ContextMenu>
             </TextBox.ContextMenu>
@@ -100,7 +100,7 @@
 
         <Button Grid.Column="1"
                 IsEnabled="{Binding Path=CanBrowse}"
-                Click="BrowseFile" 
+                Click="BrowseFileAsync" 
                 Padding="2"
                 Margin="10 0 0 0"
                 Content="Browse"
