--- a/RayCarrot.WPF/Controls/Dialogs/DriveSelectionDialog/DriveSelectionDialog.xaml
+++ b/RayCarrot.WPF/Controls/Dialogs/DriveSelectionDialog/DriveSelectionDialog.xaml
@@ -7,7 +7,8 @@
              xmlns:ui="clr-namespace:RayCarrot.CarrotFramework.UI;assembly=RayCarrot.CarrotFramework.UI"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="600"
-             d:DataContext="{Binding Source={x:Static local:DesignTimeVM.DriveSelectionViewModel}}">
+             d:DataContext="{Binding Source={x:Static local:DesignTimeVM.DriveSelectionViewModel}}"
+             Loaded="UserControl_Loaded">
     <UserControl.InputBindings>
 
         <!-- Refresh -->
