--- a/RayCarrot.WPF/Controls/Dialogs/StringInputDialog/StringInputDialog.xaml
+++ b/RayCarrot.WPF/Controls/Dialogs/StringInputDialog/StringInputDialog.xaml
@@ -13,8 +13,14 @@
             <RowDefinition />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" Text="{Binding Path=HeaderText, FallbackValue=Value:}" Margin="0 7 0 10" />
-        <TextBox Grid.Row="1" Text="{Binding Path=StringInput}" />
+        <TextBlock Grid.Row="0"
+                   FontSize="14"
+                   Text="{Binding Path=HeaderText, FallbackValue=Value:}"
+                   Margin="0 7 0 10" />
+        
+        <TextBox Grid.Row="1"
+                 Text="{Binding Path=StringInput}" />
+        
         <StackPanel Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Orientation="Horizontal">
             <Button Content="Continue" Margin="10 0" Click="OKButton_Click" IsDefault="True"/>
             <Button Content="Cancel" Click="CancelButton_Click" IsCancel="True"/>
