--- a/RayCarrot.WPF/Controls/Dialogs/RegistryBrowser/RegistrySelectionDialog.xaml
+++ b/RayCarrot.WPF/Controls/Dialogs/RegistryBrowser/RegistrySelectionDialog.xaml
@@ -13,7 +13,7 @@
         <KeyBinding Key="F5" Command="{Binding Path=RefreshCommand}" />
         <KeyBinding Key="F2" Command="{Binding Path=BeginEditCommand}" />
         <KeyBinding Key="Delete" Command="{Binding Path=DeleteKeyCommand}" />
-        <KeyBinding Key="Esc" Command="{Binding Path=EndEditCommand}" />
+        <KeyBinding Key="Escape" Command="{Binding Path=EndEditCommand}" />
     </UserControl.InputBindings>
     
     <Grid>
@@ -79,9 +79,9 @@
         
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" MinWidth="80" />
                 <ColumnDefinition Width="5"/>
-                <ColumnDefinition Width="2*" />
+                <ColumnDefinition Width="2*" MinWidth="80"/>
             </Grid.ColumnDefinitions>
 
             <!-- Key Tree View -->
