--- a/RayCarrot.WPF/Themes/Generic.xaml
+++ b/RayCarrot.WPF/Themes/Generic.xaml
@@ -3,6 +3,7 @@
                     xmlns:local="clr-namespace:RayCarrot.WPF">
 
     <Style TargetType="{x:Type local:BrowseBox}">
+        <Setter Property="Focusable" Value="False" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:BrowseBox}">
